WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279187
[IFC][SVG text] SVGTextLayoutEngine should not mutate its input
https://bugs.webkit.org/show_bug.cgi?id=279187
Summary
[IFC][SVG text] SVGTextLayoutEngine should not mutate its input
Antti Koivisto
Reported
2024-09-05 06:19:53 PDT
separate input and output
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-05 06:21:34 PDT
<
rdar://problem/135341497
>
Antti Koivisto
Comment 2
2024-09-05 06:25:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33181
EWS
Comment 3
2024-09-05 08:49:14 PDT
Committed
283211@main
(b5c89ea40f95): <
https://commits.webkit.org/283211@main
> Reviewed commits have been landed. Closing PR #33181 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug